--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     font-weight: 700;
     font-family: SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
     font-size: 16px;
+    cursor: pointer;
 }
 .about img{
     height: 35px;
@@ -54,6 +55,7 @@ body{
 }
 .login{
     height: 50px;
+    border: none;
     border-radius: 22px;
     width: 100px;
     font-family:SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic" ;
@@ -78,7 +80,7 @@ body{
     font-size: 8px;
     font-family: SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
     font-weight: 600;
-    gap: 300px;
+    gap: 30px;
     flex-direction: column;
     
 }
@@ -90,8 +92,44 @@ body{
     width: 800px;
 
 }
+.scroll{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    overflow-y: auto;
+    justify-content: center; 
+    align-items: center;           
+    scroll-snap-type: y mandatory; 
+    border-radius: 12px;
 
+}
 
+.boxes{
+    height: 120px;
+    width: 435px;
+    background-color:rgb(43, 42, 42);
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    font-size: 17px;
+    color: white;
+    scroll-snap-align: start;
+    font-family: SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
+}
+.boxes :nth-child(1){
+    padding: 5px 0px 4px 10px;
+}
+.boxes :nth-child(2){
+    font-size: 12px;
+    font-weight: 100;
+    padding: 5px 10px 10px 10px;
+
+}
+.boxes button{
+    margin-left: 17px;
+    height: 35px;
+    width: 200px;
+}
 .legal{
     display: grid;
     grid-template-columns: auto auto;
