--- a/style.css
+++ b/style.css
@@ -158,18 +158,35 @@ a{
     text-decoration: none;
     color: grey;
 }
-.songs{
-    position: relative;
+.songs {
+  display: flex;
+  column-gap: 30px;
+  align-items: center;
 }
-.card{
-    position: absolute;
-    left: 25px;
+
+.card {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  cursor: pointer;
 }
 .card img{
     height: 150px;
     border-radius: 6px;
 
 }
+.play-popup{
+    z-index: 1000;
+    position: absolute;
+    display: none;
+    right: 7px;
+    bottom: 7px;
+    height: 50px !important;
+    width: 50px;
+}
+
 .card p{
     font-weight: 100;
     color: rgb(168, 168, 168);
@@ -189,6 +206,9 @@ a{
     height: 30px;
 
 }
-#pause{
+.pause{
     display: none;
+}
+.play{
+    display: block;
 }
