--- a/style.css
+++ b/style.css
@@ -162,11 +162,27 @@ a{
   display: flex;
   column-gap: 30px;
   align-items: center;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 10px;
 }
+
+.songs::-webkit-scrollbar {
+  display: none;
+}
+
+.songs {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 
 .card {
   width: 150px;
-  height: 150px;
+  padding: 10px;
+ background-color: rgb(43, 42, 42);
+  border-radius: 10px;
+  margin-left: 15px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -181,12 +197,25 @@ a{
     z-index: 1000;
     position: absolute;
     display: none;
-    right: 7px;
-    bottom: 7px;
+    right: 15px;
+    bottom: 80px;
     height: 50px !important;
     width: 50px;
+    
 }
+.pause-popup{
+    position: absolute;
+    display: none;
+    right: 15px;
+    bottom: 80px;
+    height: 50px !important;
+    width: 50px;
 
+}
+.card h2{
+    margin: 0;;
+    padding-top: 10px;
+}
 .card p{
     font-weight: 100;
     color: rgb(168, 168, 168);
@@ -206,9 +235,9 @@ a{
     height: 30px;
 
 }
-.pause{
+#pause{
     display: none;
 }
-.play{
+#play{
     display: block;
 }
