--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body{
     font-size: 17px;
     color: white;
     scroll-snap-align: start;
-    font-family: SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
+    font-family: "SpotifyMixUI", "CircularSp-Arab", "CircularSp-Hebr", "CircularSp-Cyrl", "CircularSp-Grek", "CircularSp-Deva", "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
 }
 .boxes :nth-child(1) , .box2{
     padding: 5px 0px 4px 10px;
@@ -210,7 +210,6 @@ a{
     bottom: 80px;
     height: 50px !important;
     width: 50px;
-
 }
 .card h2{
     margin: 0;;
@@ -221,23 +220,53 @@ a{
     color: rgb(168, 168, 168);
 }
 .playbar{
-    background-color: rgb(206, 249, 209);
-    height: 50px;
+    background-color: rgb(54, 54, 54);
+    border-radius: 30px;
+    height: 80px;
     position: absolute;
     top: 435px;
     width: 800px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 20px;
 }
 .playbar img{
-    height: 30px;
+    height: 45px;
+    filter: invert(1);
+    cursor: pointer;
 
+}
+.songtime ,.songinfo{
+    font-weight: 100;
+    font-size: 16px;
+    padding: 0px 14px;
+    cursor: pointer;
+
+    
 }
 #pause{
     display: none;
 }
 #play{
     display: block;
+}
+.seekbar{
+    height: 4px;
+    position: relative;
+    background-color: white;
+    width: 800px;
+    cursor: pointer;
+
+}
+.circle{
+    position: absolute;
+    top: -6px;
+    left:0;
+    background-color: #ffff;
+    border-radius: 10px;
+    height: 15px;
+    width: 15px;
+    transition: 0.5s ease;
+    cursor: pointer;
 }
