--- a/style.css
+++ b/style.css
@@ -1,5 +1,49 @@
 body{
     background-color: black;
+    
+}
+.content{
+    display: none;
+}
+.loader {
+  display: flex;
+  /* align-items: center;
+  justify-content: center; */
+  position: fixed;
+  z-index: 3;
+  top: 50vh;
+  left: 50vw;
+
+}
+
+.bar1 {
+  display: inline-block;
+  width: 3px;
+  height: 20px;
+  background-color: rgba(255, 255, 255, .5);
+  border-radius: 10px;
+  animation: scale-up4 1s linear infinite;
+}
+
+.bar1:nth-child(2) {
+  height: 35px;
+  margin: 0 5px;
+  animation-delay: .25s;
+}
+
+.bar1:nth-child(3) {
+  animation-delay: .5s;
+}
+
+@keyframes scale-up4 {
+  20% {
+    background-color: #ffff;
+    transform: scaleY(1.5);
+  }
+
+  40% {
+    transform: scaleY(1);
+  }
 }
 .navbar{
     display: flex;
@@ -124,7 +168,7 @@ body{
 
 }
 .disclaimer{
-        font-weight: 100;
+        font-weight: 200;
         color: red;
         font-style: italic;
         font-size: 13px;
@@ -278,9 +322,24 @@ a{
     transition: 0.5s ease;
     cursor: pointer;
 }
-.ham{
+#ham{
     display: none;
 }
+@media (max-width: 768px){
+    .left{
+        left: -550px;
+    }
+}
+.leftham{
+    z-index: 2;
+    left: 16px;
+    width: 430px;
+    transition: cubic-bezier(1, 0, 0, 1)
+}
+.rightToggle{
+    display: none;
+}
+
 @media (max-width: 768px){
     .ham{
         display: block;
@@ -288,8 +347,11 @@ a{
     .home{
         display: none;
     }
-    .left{
+    /* .left{
         left: -550px;
+    } */
+     #ham{
+    display: block;
     }
     .right{
         right: 455px;
@@ -315,16 +377,16 @@ a{
     .login{
         height: 40px;
         width: 60px;
-        margin-left: 40px;
+        margin-left: 45px;
     }
     .playbar{
         bottom:75px;
         top: unset;
     }
     .disclaimer{
-        font-weight: 100;
+        font-weight: 200;
         color: red;
         font-style: italic;
-        font-size: 13px;
+        font-size: 15px;
     }
 }
